# native_windows_origin_c

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  screen_windows.spec
docs/: ACCEPTANCE.md  ARCHITECTURE.md  TODO_TESTS.md
docs/goal/: 产品方案_局域网高性能远程桌面.md  模块方案评审_逐模块对比与选型.md
src/screen_windows/: __init__.py  __main__.py  bench.py  cli.py  clipboard.py  config.py  desktop.py  discovery.py  display.py  encoder.py  filetransfer.py  host.py  info.py  input.py  protocol.py  quality.py  server.py  video_source.py  webrtc.py  webui.py
src/screen_windows/app/: __init__.py  bench.py  cli.py  config.py  host.py  info.py  launcher.py  process_guard.py  server.py
src/screen_windows/control/: __init__.py  display.py  input.py
src/screen_windows/media/: __init__.py  encoder.py  quality.py  video_source.py  webrtc.py  webrtc_encoder.py
src/screen_windows/network/: __init__.py  protocol.py
src/screen_windows/security/: __init__.py  auth.py
src/screen_windows/telemetry/: __init__.py  stats.py
src/screen_windows/web/: __init__.py  webui.py
src/screen_windows/web/assets/: __init__.py  launcher.html  webui.html
tests/: test_auth.py  test_bench.py  test_cli.py  test_clipboard.py  test_config.py  test_discovery.py  test_display.py  test_encoder.py  test_filetransfer.py  test_host.py  test_info.py  test_input.py  test_launcher.py  test_process_guard.py  test_quality.py  test_server.py  test_stats.py  test_video_source.py  test_webrtc.py  test_webui.py
