[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screen-windows"
version = "0.1.0"
description = "LAN high performance remote desktop for Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.0",
  "aiortc>=1.14.0",
  "dxcam[cv2]>=0.3.0",
  "mss>=10.0.0",
  "numpy>=1.26.0",
  "opencv-python>=4.9.0,<5",
  "psutil>=5.9.0",
  "websockets>=13.0",
  "zeroconf>=0.131.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
